syntax = "proto3";

option go_package = "github.com/YangzhenZhao/easyvideo/go_kit_back_end/tag/pb";

package tag;

import "google/protobuf/empty.proto";

service TagService {
    rpc GetVideoTags(GetVideoTagsRequest) returns (GetVideoTagsResponse);
    rpc GetAllTags(google.protobuf.Empty) returns (GetAllTagsResponse);
}

message GetVideoTagsRequest {
    int32 videoID = 1;
}

message GetVideoTagsResponse {
    repeated string tags = 1;
}

message GetAllTagsResponse {
    repeated string tags = 1;
}